# shqaff

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements_dev.txt
shqaff/: config.py  consumer.py  db.py  event_loop.py  fsm.py  models.py  producer.py  registry.py  status.py  task.py
tests/: conftest.py  test_event_loop.py  test_fail_after_max_retries.py  test_invalid_fsm_transition.py  test_retry_logic.py  test_smoke.py  test_task_fsm.py
